#src/scss/core/template-parts.scss
body {
    @extend %merri-norm;
}

h1,h2,h3,h4{
        @extend %monst-alter-bold;
}
h1{
    @extend %monst-alter-light;
    color:#fff;
    line-height: 59px;
    font-size:3rem;
    @include mq('tablet-wide'){
        font-size:2rem;
        line-height: 39px;
    }
    @include mq('phablet'){
        font-size:1.5rem;
        line-height: 29px;
    }
    @include mq('phone-wide'){
        font-size:1.2rem;
    }
}
h2{
    font-size: 4.5rem;
    text-align: center;
}
h3{
    font-size:2.5rem;
    
}
h4{
    font-size:1.5rem;
    @include mq('phone-wide'){
        font-size:1rem; 
    }
}
h5{
    font-size:1.25rem;
    @include mq('phone-wide'){
        font-size:.8rem; 
    }
}
.e--red{
    color: $def-red;
}
.e--blue{
    color:  $def-blue;
}
.e--light-red{
    color: $light-red;
}
.e--light-blue{
    color: $light-blue;
}

.titles {
    text-align: center;
    h2 {
      color: $light-blue;
      margin-bottom: 1rem;
    }
    
}

.button{
    border-radius: 30px;
    padding: 0.75rem  3rem ;
    @extend %avenir-bold;
    cursor: pointer;
    transition: .3s all;
    &:focus {
        outline: none;
    }

    &.e--transparent {
        &-red {
            background-color: transparent;
            border: 2px solid $def-red;
            color: $def-red;
        }

        &-blue {
            background-color: transparent;
            border: 2px solid $def-blue;
            color: $def-blue;
        }
    }

    &.e--white{
        background:#fff;
        color: $def-red;
    }
    &.e--red{
        color:#fff;
        background:$def-red;

        &:hover,
        &:focus {
            background-color: $def-red-hover;
        }
    }
    &.e--blue{
        color: #fff;
        background: $def-blue;
    }
    &.e--light-red{
        color:$def-red;
        background:transparent;
        border:1px solid $def-red;
    }
    &.e--light-blue{
        color:$def-blue;
        background:transparent;
        border:1px solid $def-blue;
    }
}
.sub-title{
    font-size: 2rem;
    @extend %monst-alter-light;
    &.e--line {
        position: relative;
        &::before {
            content: '';
            display: inline-block;
            width: 150px;
            height: 6px;
            background-color: $def-red;
            margin-right: 4rem;
            position: absolute;
            left: -70px;
            top:calc(50% - 3px)
        }   
    }
    &.e--line-blue{
        &::before {
            background-color: $def-blue;
        }
    }
}
.sub-description{
    color:$def-black;
    font-size: 1.5rem;
    @extend %monst-alter-light;
}

a {
    text-decoration: none;
    &:hover {
        text-decoration: none;
    }
}

img {
    width: 100%;
    height: auto;
}

